--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
   background: var(--grafit);
   color: white;
   font-family: Open Sans;
+  user-select: none;
 }
 .container {
   width: 1200px;
@@ -30,10 +31,14 @@ body {
   position: absolute;
   top: 50px;
   right: 50px;
-  min-height: 500px;
+  min-height: 800px;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
 }
 
 .teachers__send {
+  margin-bottom: 50px;
   padding: 10px 15px;
   cursor: pointer;
   border: 2px solid var(--theme);
@@ -47,14 +52,40 @@ body {
   background: var(--pur);
   background: var(--theme);
 }
+
 .teachers__checkboxContainer {
-  height: 50px;
-  background: var(--theme);
   color: white;
   display: flex;
   flex-direction: column;
 }
 .teachers__checkbox {
+  /* z-index: -9999; */
+  margin: 20px;
+  background: var(--theme);
+  display: none;
+}
+.teachers__checkbox:checked + label {
+  background: var(--theme);
+  /* color: red; */
+}
+
+.teachers__inputContainer {
+  position: relative;
+  text-align: center;
+  padding: 30px 0;
+  line-height: 60px;
+}
+label {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+form < label {
 }
 /*---------------------------------*/
 .absentTeachers {
