--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
   color: white;
   display: flex;
   flex-direction: column;
+  border: 3px solid var(--lightGray);
 }
 .teachers__checkbox {
   /* z-index: -9999; */
